# frezume-svc

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt
app/: config.py  error_handler.py
app/account/: dto.py  repository.py  service.py
app/agent/: document_extract_agent.py  document_rewrite_agent.py
app/auth/: dependency.py  dto.py  route.py  service.py  task.py
app/database/: __init__.py  repository.py
app/document/: dto.py  route.py  service.py  task.py
app/email/: service.py
app/gateway/: dto.py  emitter.py  route.py  service.py
app/lib/: ai_clients.py  annotations.py  constants.py  dependency.py  guards.py  http_client.py  model.py  responses.py  utils.py
app/middleware/: auth_middleware.py  logging_middleware.py  usage_middleware.py
app/payment/: dto.py  repository.py  route.py  service.py  webhook.py
app/session/: repository.py  service.py
app/session_state/: dto.py  repository.py  route.py  service.py
app/stripe/: dto.py  repository.py  route.py  service.py  webhook.py
app/subscription/: dto.py  repository.py  route.py  service.py  webhook.py
app/usage/: repository.py  service.py
app/user/: dto.py  repository.py  route.py  service.py
app/verification/: repository.py  service.py
migrations/: env.py
migrations/versions/: 36c2cf83455a_resume_table.py  37dbf12946a0_jd_in_session_state.py  3a656d8600ee_init.py  4328cc0b23f0_cascade.py  4451f2d9e25c_rewrites.py  4db76525e225_usage_table.py  70c21d9227c6_otp.py  7b567b70afd9_usage_table.py  834449196334_init.py  (+7 more)
(+12 files in other folders)
