[project]
name = "resumevx-svc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <=3.12"
dependencies = [
    "aioboto3>=15.5.0",
    "alembic>=1.17.2",
    "alembic-postgresql-enum>=1.8.0",
    "asyncpg>=0.31.0",
    "boto3>=1.34.0",
    "docling>=2.65.0",
    "fastapi[standard]>=0.127.0",
    "llama-index>=0.14.10",
    "llama-parse>=0.6.54",
    "lmstudio>=1.5.0",
    "postmarker>=1.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-ai>=1.37.0",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.8.0",
    "sqlmodel>=0.0.29",
    "stripe>=7.0.0",
    "types-boto3>=1.42.14",
]
